--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ html {
 
 *, a, a:visited {
   color: #fff;
+  text-decoration: none;
 }
 
 header {
@@ -226,7 +227,7 @@ h1 {
   filter: dropshadow(color=#000, offx=0, offy=1);
 }
 h1>span {
-color: #f9e6e3;
+  color: #f9d6a3;
 }
 
 .enable {
@@ -291,8 +292,20 @@ color: #f9e6e3;
 
 #code {
   font-size: 11px;
-  width: 450px;
-  height: 80px;
+  padding: 10px;
+  width: 460px;
+  height: 78px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: inset 0.5px 2px 8px #3C5A76, 0 0 150px #fff;
+  -webkit-box-shadow: inset 0.5px 2px 8px #3C5A76, 0 0 150px #fff;
+  -o-box-shadow: inset 0.5px 2px 8px #3C5A76, 0 0 150px #fff;
+  box-shadow: inset 0.5px 2px 8px #3C5A76, 0 0 150px #fff;
+  border: none;
 }
 
 #howto {
@@ -303,11 +316,40 @@ ol {
   width: 450px;
   margin: 15px auto;
   text-align: left;
+  list-style: none;
 }
 
-p, li {
+p, li, label {
+  display: block;
   font-size: 14px;
   line-height: 28px;
+}
+
+li>span {
+  display: inline-block;
+  background: #fff;
+  color: #3C5A76;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -o-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -khtml-border-radius: 30px;
+  border-radius: 30px;
+  width: 20px;
+  line-height: 20px;
+  text-align: center;
+  margin-right: 10px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 30%;
+  right: 30%;
+  padding: 10px;
+  font-size: 11px;
+  color: #bbc;
+  border-top: 1px solid #4C6A86;
 }
 
 
