--- a/lib/jquery.fancybox.css
+++ b/lib/jquery.fancybox.css
@@ -361,3 +361,13 @@
 .fancybox-ie #fancy-bg-sw	{ filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_sw.png', sizingMethod='scale'); }
 .fancybox-ie #fancy-bg-w	{ filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_w.png', sizingMethod='scale'); }
 .fancybox-ie #fancy-bg-nw	{ filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_nw.png', sizingMethod='scale'); }
+
+
+/* Custom */
+#fancybox-title {
+  font: normal normal bold 17px/normal HelveticaNeue, Helvetica, Arial, sans-serif;
+  color: white;
+  padding-top: 20px;
+  text-shadow: black 0px 4px 30px;
+  text-rendering: optimizelegibility;
+}
