--- a/lib/jquery.fancybox.css
+++ b/lib/jquery.fancybox.css
@@ -364,10 +364,16 @@
 
 
 /* Custom */
+
+#fancybox-overlay {
+  -webkit-box-shadow: inset 0 5px 30px 0 #000;
+  -moz-box-shadow: inset 0 5px 30px 0 #000;
+  box-shadow: inset 0 5px 30px 0 #000;
+}
+
 #fancybox-title {
   font: normal normal bold 17px/normal HelveticaNeue, Helvetica, Arial, sans-serif;
   color: white;
-  padding-top: 20px;
   text-shadow: black 0px 4px 30px;
   text-rendering: optimizelegibility;
 }
