--- a/lib/jquery.fancybox.css
+++ b/lib/jquery.fancybox.css
@@ -192,7 +192,7 @@
 	height: 32px;
 	float: left;
 }
-
+/*
 #fancybox-title-left {
 	padding-left: 15px;
 	background-image: url('fancybox.png');
@@ -214,7 +214,7 @@
 	background-position: -55px -90px;
 	background-repeat: no-repeat;
 }
-
+*/
 #fancybox-left, #fancybox-right {
 	position: absolute;
 	bottom: 0px;
@@ -371,7 +371,7 @@
   box-shadow: inset 0 5px 30px 0 #000;
 }
 
-#fancybox-title {
+#fancybox-title-main {
   font: normal normal bold 17px/normal HelveticaNeue, Helvetica, Arial, sans-serif;
   color: white;
   text-shadow: black 0px 4px 30px;
