--- a/css/style.css
+++ b/css/style.css
@@ -303,8 +303,6 @@ h2 {
   border: #0661AE solid 1px;
   padding: 12px 16px;
   cursor: pointer;
-  font-size: 16px;
-  line-height: 20px;
   text-decoration: none;
   font-weight: bold;
   text-shadow: #05589E 0 -1px 0;
@@ -335,6 +333,13 @@ h2 {
 
 #enable {
   margin: 50px 0;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+#done, #picuous {
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .focuslink {
@@ -358,17 +363,6 @@ h2 {
   padding: 10px;
   width: 460px;
   height: 78px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  -moz-box-shadow: inset 0.5px 2px 8px #ED7500;
-  -webkit-box-shadow: inset 0.5px 2px 8px #ED7500;
-  -o-box-shadow: inset 0.5px 2px 8px #ED7500;
-  box-shadow: inset 0.5px 2px 8px #ED7500;
-  border: none;
   overflow: hidden;
 }
 
@@ -415,6 +409,32 @@ li>span {
   display: none;
 }
 
+#further img {
+  margin: 0px 10px;
+}
+
+.feature {
+  margin: 20px auto;
+  padding-bottom: 20px;
+  border-bottom: solid 1px #ED7500;
+  line-height: 130%;
+  width: 480px;
+}
+
+.feature_title {
+  font-weight: bold;
+}
+
+.fright {
+  float: right;
+  text-align: left;
+}
+
+.fleft {
+  float: left;
+  text-align: right;
+}
+
 .right {
   text-align: right;
 }
@@ -431,7 +451,6 @@ footer {
   padding: 10px;
   font-size: 11px;
   color: #ecc;
-  border-top: 1px solid #FBB03B;
 }
 
 
