--- a/lib/jquery.fancybox.css
+++ b/lib/jquery.fancybox.css
@@ -381,3 +381,22 @@
 #fancybox-img {
   max-width: initial;
 }
+
+#powered_by_tumblrbox {
+  bottom: -39px;
+  display: block;
+  position: absolute;
+  z-index: 1102;
+  padding-top: 5px;
+  text-align: right;
+  width: 100%;
+  height: 32px;
+}
+#powered_by_tumblrbox, #powered_by_tumblrbox a {
+  vertical-align: baseline;
+  font-family: arial;
+  font: normal normal bold 17px/normal HelveticaNeue, Helvetica, Arial, sans-serif;
+  color: #fff;
+  text-shadow: #000 0px 4px 30px;
+  text-rendering: optimizelegibility;
+}
