--- a/lib/jquery.fancybox.css
+++ b/lib/jquery.fancybox.css
@@ -393,6 +393,7 @@
   height: 32px;
 }
 #powered_by_tumblrbox, #powered_by_tumblrbox a {
+  display: none;
   vertical-align: baseline;
   font-family: arial;
   font: normal normal bold 17px/normal HelveticaNeue, Helvetica, Arial, sans-serif;
